--- a/messier-87.scss
+++ b/messier-87.scss
@@ -6,3 +6,30 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+/**
+  Triangle for specific direction.
+  Example of Usage: @include triangle(up, 10px, orange);
+ */
+@mixin triangle($direction, $size, $color) {
+  width: 0;
+  height: 0;
+
+  @if $direction == up {
+    border-left: $size solid transparent;
+    border-right: $size solid transparent;
+    border-bottom: $size solid $color;
+  } @else if $direction == right {
+    border-top: $size solid transparent;
+    border-bottom: $size solid transparent;
+    border-left: $size solid $color;
+  } @else if $direction == down {
+    border-left: $size solid transparent;
+    border-right: $size solid transparent;
+    border-top: $size solid $color;
+  } @else if $direction == left {
+    border-top: $size solid transparent;
+    border-bottom: $size solid transparent;
+    border-right: $size solid $color;
+  }
+}
